Deployment_back.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpserver-deployment-back
  labels:
    app: httpserver-back
spec:
  replicas: 3
  selector:
    matchLabels:
      app: httpserver-back
  template:
    metadata:
      labels:
        app: httpserver-back
    spec:
      volumes:
      - name: http-volume
        hostPath:
          path: /tmp/data
          type: Directory
      containers:
        - name: http-server
          image: wxwd14388/httpserver:v1.0.0
          ports:
          - containerPort: 8080
          volumeMounts:
          - mountPath: /data
            name: http-volume
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
              httpHeaders:
              - name: user
                value: cluster-livenessProbe
            initialDelaySeconds: 10
            periodSeconds: 3
          readinessProbe:
            exec:
              command:
              - cat
              - /tmp/healthy
            initialDelaySeconds: 10
            periodSeconds: 3
          lifecycle:
            postStart:
              exec:
                command: ["/bin/sh", "-c", "echo preStart: good morning! >> /data/data.log"]
            preStop:
              httpGet:
                path: /preStop
                port: 8080
          resources:
            requests:
              memory: "32Mi"
              cpu: 250m
            limits:
              memory: "128Mi"
              cpu: 500m

---

apiVersion: v1
kind: Service
metadata:
  name: httpserver-service-back
spec:
  type: NodePort
  selector:
    app: httpserver-back
  ports:
    - protocol: TCP
      port: 9878
      targetPort: 8080
      nodePort: 30082
